资料/MT设备/二次开发例程及接口文件V3.16.2/接口文件3.16.2/3.16.2/32bit/MT_API.h

#define MT_API extern "C" __declspec( dllexport )
#define MT_API __declspec( dllexport )
MT_API INT32 __stdcall MT_Set_Axis_Circle_Axis(WORD AObj,INT32 Axis_ID0,INT32 Axis_ID1);
MT_API INT32 __stdcall MT_Set_Axis_Circle_Acc(WORD AObj,INT32 Value);
MT_API INT32 __stdcall MT_Set_Axis_Circle_Dec(WORD AObj,INT32 Value);
MT_API INT32 __stdcall MT_Set_Axis_Circle_V(WORD AObj,INT32 Value);
MT_API INT32 __stdcall MT_Set_Axis_Circle_R_CW_Run_Rel(WORD AObj,INT32 AR,INT32 Axis_Target0,INT32 Axis_Target1);
MT_API INT32 __stdcall MT_Set_Axis_Circle_R_CW_Run_Abs(WORD AObj,INT32 AR,INT32 Axis_Target0,INT32 Axis_Target1);
MT_API INT32 __stdcall MT_Set_Axis_Circle_R_CCW_Run_Rel(WORD AObj,INT32 AR,INT32 Axis_Target0,INT32 Axis_Target1);
MT_API INT32 __stdcall MT_Set_Axis_Circle_R_CCW_Run_Abs(WORD AObj,INT32 AR,INT32 Axis_Target0,INT32 Axis_Target1);
MT_API INT32 __stdcall MT_Set_Axis_Circle_Stop(WORD AObj);
MT_API INT32 __stdcall MT_Set_Axis_Circle_Halt(WORD AObj);
MT_API INT32 __stdcall MT_Get_Axis_Circle_Num(INT32* pValue);
MT_API INT32 __stdcall MT_Get_Axis_Circle_Status(WORD AObj,INT32* pValue);
MT_API INT32 __stdcall MT_Get_Axis_Circle_Axis(WORD AObj,INT32* pID0,INT32* pID1);
MT_API INT32 __stdcall MT_Get_Axis_Circle_Acc(WORD AObj,INT32* pValue);
MT_API INT32 __stdcall MT_Get_Axis_Circle_Dec(WORD AObj,INT32* pValue);
MT_API INT32 __stdcall MT_Get_Axis_Circle_V(WORD AObj,INT32* pValue);
MT_API INT32 __stdcall MT_Get_PLC_Var_Num(INT32* pValue);
MT_API INT32 __stdcall MT_Get_PLC_Var_Data(WORD AObj,INT32* pValue);
MT_API INT32 __stdcall MT_Set_PLC_Var_Data(WORD AObj,INT32 Value);
MT_API INT32 __stdcall MT_Set_PLC_Pause(void);
MT_API INT32 __stdcall MT_Set_PLC_Stop(void);
MT_API INT32 __stdcall MT_Set_PLC_Run(void);
MT_API INT32 __stdcall MT_Set_PLC_Data(WORD AObj,BYTE Value);
MT_API INT32 __stdcall MT_Get_PLC_Code_Size(INT32* pValue);
MT_API INT32 __stdcall MT_Get_PLC_Task_Count(INT32* pValue);
MT_API INT32 __stdcall MT_Get_PLC_Task_Status(WORD AObj,INT32* pValue);
MT_API INT32 __stdcall MT_Get_PLC_Var_Seg(INT32* pValue);
MT_API INT32 __stdcall MT_Get_PLC_Var_Used(INT32* pValue);
MT_API INT32 __stdcall MT_Get_PLC_Status(INT32* pValue);
MT_API INT32 __stdcall MT_Get_PLC_Tasks_Status(INT32* pValue);
MT_API INT32 __stdcall MT_Get_PLC_Axis_Ratio(WORD AObj,float* pValue);
MT_API INT32 __stdcall MT_Get_PLC_Encoder_Ratio(WORD AObj,float* pValue);
MT_API INT32 __stdcall MT_Set_Axis_Home_V_Start(WORD AObj,INT32 Value);
MT_API INT32 __stdcall MT_Set_Axis_Home_Acc(WORD AObj,INT32 Value);
MT_API INT32 __stdcall MT_Set_Axis_Home_Dec(WORD AObj,INT32 Value);
MT_API INT32 __stdcall MT_Get_Axis_Home_Acc(WORD AObj,INT32* pValue);
MT_API INT32 __stdcall MT_Get_Axis_Home_Dec(WORD AObj,INT32* pValue);
MT_API INT32 __stdcall MT_Set_Axis_Velocity_V_Start(WORD AObj,INT32 Value);
MT_API INT32 __stdcall MT_Set_Axis_Velocity_Acc(WORD AObj,INT32 Value);
MT_API INT32 __stdcall MT_Set_Axis_Velocity_Dec(WORD AObj,INT32 Value);
MT_API INT32 __stdcall MT_Get_Axis_Velocity_Acc(WORD AObj,INT32* pValue);
MT_API INT32 __stdcall MT_Get_Axis_Velocity_Dec(WORD AObj,INT32* pValue);
MT_API INT32 __stdcall MT_Set_Axis_Position_V_Start(WORD AObj,INT32 Value);
MT_API INT32 __stdcall MT_Set_Axis_Position_Acc(WORD AObj,INT32 Value);
MT_API INT32 __stdcall MT_Set_Axis_Position_Dec(WORD AObj,INT32 Value);
MT_API INT32 __stdcall MT_Get_Axis_Position_Acc(WORD AObj,INT32* pValue);
MT_API INT32 __stdcall MT_Get_Axis_Position_Dec(WORD AObj,INT32* pValue);
MT_API INT32 __stdcall MT_Set_Axis_Line_V_Start(WORD AObj,INT32 Value);
MT_API INT32 __stdcall MT_Set_Axis_Circle_V_Start(WORD AObj,INT32 Value);
MT_API INT32 __stdcall MT_Set_Axis_Line_X_Run_Rel(WORD AObj,INT32 AAxis_Num,INT32* pAxis,INT32* pTarget);
MT_API INT32 __stdcall MT_Set_Axis_Line_X_Run_Abs(WORD AObj,INT32 AAxis_Num,INT32* pAxis,INT32* pTarget);
MT_API INT32 __stdcall MT_Set_Axis_Line_X_Target_Rel(WORD AObj,INT32 AAxisID,INT32 ATarget);
MT_API INT32 __stdcall MT_Set_Axis_Line_X_Target_Abs(WORD AObj,INT32 AAxisID,INT32 ATarget);
MT_API INT32 __stdcall MT_Set_Axis_Line_X_Count(WORD AObj,INT32 ANum);
MT_API INT32 __stdcall MT_Set_Axis_Line_X_Axis(WORD AObj,INT32 AAxisID,INT32 AAxis);
MT_API INT32 __stdcall MT_Set_Stream_Run(void);
MT_API INT32 __stdcall MT_Set_Stream_Stop(void);
MT_API INT32 __stdcall MT_Set_Stream_Pause(void);
MT_API INT32 __stdcall MT_Set_Stream_Clear(void);
MT_API INT32 __stdcall MT_Get_Stream_Space(INT32* pValue);
MT_API INT32 __stdcall MT_Get_Stream_Total(INT32* pValue);
MT_API INT32 __stdcall MT_Get_Stream_Count(INT32* pValue);
MT_API INT32 __stdcall MT_Set_Stream_Delay(INT32 Value);
MT_API INT32 __stdcall MT_Set_Stream_Line_Acc(WORD AObj,INT32 Value);
MT_API INT32 __stdcall MT_Set_Stream_Line_Dec(WORD AObj,INT32 Value);
MT_API INT32 __stdcall MT_Set_Stream_Line_V_Max(WORD AObj,INT32 Value);
MT_API INT32 __stdcall MT_Set_Stream_Line_V_Start(WORD AObj,INT32 Value);
MT_API INT32 __stdcall MT_Set_Stream_Line_Stop(WORD AObj);
MT_API INT32 __stdcall MT_Set_Stream_Line_Halt(WORD AObj);
MT_API INT32 __stdcall MT_Set_Stream_Line_X_Run_Rel(WORD AObj,INT32 AAxis_Num,INT32* pAxis,INT32* pTarget);
MT_API INT32 __stdcall MT_Set_Stream_Line_X_Run_Abs(WORD AObj,INT32 AAxis_Num,INT32* pAxis,INT32* pTarget);
MT_API INT32 __stdcall MT_Set_Stream_Circle_Axis(WORD AObj,INT32 Axis_ID0,INT32 Axis_ID1);
MT_API INT32 __stdcall MT_Set_Stream_Circle_Acc(WORD AObj,INT32 Value);
MT_API INT32 __stdcall MT_Set_Stream_Circle_Dec(WORD AObj,INT32 Value);
MT_API INT32 __stdcall MT_Set_Stream_Circle_V_Max(WORD AObj,INT32 Value);
MT_API INT32 __stdcall MT_Set_Stream_Circle_V_Start(WORD AObj,INT32 Value);
MT_API INT32 __stdcall MT_Set_Stream_Circle_R_CW_Run_Rel(WORD AObj,INT32 AR,INT32 Axis_Target0,INT32 Axis_Target1);
MT_API INT32 __stdcall MT_Set_Stream_Circle_R_CW_Run_Abs(WORD AObj,INT32 AR,INT32 Axis_Target0,INT32 Axis_Target1);
MT_API INT32 __stdcall MT_Set_Stream_Circle_R_CCW_Run_Rel(WORD AObj,INT32 AR,INT32 Axis_Target0,INT32 Axis_Target1);
MT_API INT32 __stdcall MT_Set_Stream_Circle_R_CCW_Run_Abs(WORD AObj,INT32 AR,INT32 Axis_Target0,INT32 Axis_Target1);
MT_API INT32 __stdcall MT_Set_Stream_Circle_Stop(WORD AObj);
MT_API INT32 __stdcall MT_Set_Stream_Circle_Halt(WORD AObj);
MT_API INT32 __stdcall MT_Set_Stream_Wait_Line(WORD AObj);
MT_API INT32 __stdcall MT_Set_Stream_Wait_Circle(WORD AObj);
MT_API INT32 __stdcall MT_Set_Stream_OC_Out_Single(WORD AObj,INT32 Value);
MT_API INT32 __stdcall MT_Set_Stream_OC_Out_All(INT32 Value);
MT_API INT32 __stdcall MT_Set_Stream_Optic_Out_Single(WORD AObj,INT32 Value);
MT_API INT32 __stdcall MT_Set_Stream_Optic_Out_All(INT32 Value);
MT_API INT32 __stdcall MT_Set_Stream_Wait_Optic_In(WORD AObj,INT32 Value);
MT_API INT32 __stdcall MT_Set_Stream_Run_Check(void);
MT_API INT32 __stdcall MT_Set_Stream_Dec_Enable(void);
MT_API INT32 __stdcall MT_Set_Stream_Dec_Disable(void);
MT_API INT32 __stdcall MT_Get_Encoder_Num(INT32* pValue);
MT_API INT32 __stdcall MT_Get_Encoder_Pos(WORD AObj,INT32* pValue);
MT_API INT32 __stdcall MT_Set_Encoder_Pos(WORD AObj,INT32 Value);
MT_API INT32 __stdcall MT_Set_Encoder_Z_Polarity(WORD AObj,INT32 Value);
MT_API INT32 __stdcall MT_Set_Encoder_Dir_Polarity(WORD AObj,INT32 Value);
MT_API INT32 __stdcall MT_Get_Encoder_Index_Line_Count(WORD AObj,INT32* pValue);
MT_API INT32 __stdcall MT_Set_Encoder_Over_Enable(WORD AObj,INT32 Value);
MT_API INT32 __stdcall MT_Set_Encoder_Over_Max(WORD AObj,INT32 Value);
MT_API INT32 __stdcall MT_Set_Encoder_Over_Stable(WORD AObj,INT32 Value);
MT_API INT32 __stdcall MT_Help_Step_Line_Real_To_Steps(double AStepAngle,INT32 ADiv,double APitch,double ALineRatio,double AValue);
MT_API INT32 __stdcall MT_Help_Step_Circle_Real_To_Steps(double AStepAngle,INT32 ADiv,double ACircleRatio,double AValue);
MT_API double __stdcall MT_Help_Step_Line_Steps_To_Real(double AStepAngle,INT32 ADiv,double APitch,double ALineRatio,INT32 AValue);
MT_API double __stdcall MT_Help_Step_Circle_Steps_To_Real(double AStepAngle,INT32 ADiv,double ACircleRatio,INT32 AValue);