资料/MT设备/二次开发例程及接口文件V3.16.2/接口文件3.16.2/3.16.2/32bit/MT_API.pas


//================================================================
//圆弧插补
//================================================================
//设置圆弧插补主轴及速度
function MT_Set_Axis_Circle_Axis(AObj:Word;Axis_ID0,Axis_ID1:Integer):Integer;stdcall;external 'MT_API.dll'
//设置圆弧插补加速度
function MT_Set_Axis_Circle_Acc(AObj:Word;Value:Integer):Integer;stdcall;external 'MT_API.dll'
//设置圆弧插补减速度
function MT_Set_Axis_Circle_Dec(AObj:Word;Value:Integer):Integer;stdcall;external 'MT_API.dll'
//设置圆弧插补速度
function MT_Set_Axis_Circle_V(AObj:Word;Value:Integer):Integer;stdcall;external 'MT_API.dll'

//设置圆弧插补启动 顺时钟  圆心坐标模式
function MT_Set_Axis_Circle_R_CW_Run_Rel(AObj:Word;AR:Integer;
                  Axis_Target0,Axis_Target1:Integer):Integer;stdcall;external 'MT_API.dll'
function MT_Set_Axis_Circle_R_CW_Run_Abs(AObj:Word;AR:Integer;
                  Axis_Target0,Axis_Target1:Integer):Integer;stdcall;external 'MT_API.dll'
//设置圆弧插补启动 逆时钟   圆心坐标
function MT_Set_Axis_Circle_R_CCW_Run_Rel(AObj:Word;AR:Integer;
                  Axis_Target0,Axis_Target1:Integer):Integer;stdcall;external 'MT_API.dll'
function MT_Set_Axis_Circle_R_CCW_Run_Abs(AObj:Word;AR:Integer;
                  Axis_Target0,Axis_Target1:Integer):Integer;stdcall;external 'MT_API.dll'
//设置圆弧插补停止
function MT_Set_Axis_Circle_Stop(AObj:Word):Integer;stdcall;external 'MT_API.dll'
//设置圆弧插补急停
function MT_Set_Axis_Circle_Halt(AObj:Word):Integer;stdcall;external 'MT_API.dll'

//读取圆弧插补模块
function MT_Get_Axis_Circle_Num(pValue:PInteger):Integer;stdcall;external 'MT_API.dll'
//插补运动状态
function MT_Get_Axis_Circle_Status(AObj:Word;pValue:PInteger):Integer;stdcall;external 'MT_API.dll'
//插补轴
function MT_Get_Axis_Circle_Axis(AObj:Word;pID0,pID1:PInteger):Integer;stdcall;external 'MT_API.dll'
//插补加速度
function MT_Get_Axis_Circle_Acc(AObj:Word;pValue:PInteger):Integer;stdcall;external 'MT_API.dll'
//插补减速度
function MT_Get_Axis_Circle_Dec(AObj:Word;pValue:PInteger):Integer;stdcall;external 'MT_API.dll'
//插补速度
function MT_Get_Axis_Circle_V(AObj:Word;pValue:PInteger):Integer;stdcall;external 'MT_API.dll'

//PLC相关的函数
//PLC相关的指令码
//读变量存储器大小
function MT_Get_PLC_Var_Num(pValue:PInteger):Integer;stdcall;external 'MT_API.dll'
//读变量
function MT_Get_PLC_Var_Data(AObj:Word;pValue:PInteger):Integer;stdcall;external 'MT_API.dll'
//写变量
function MT_Set_PLC_Var_Data(AObj:Word;Value:Integer):Integer;stdcall;external 'MT_API.dll'
//暂停PLC
function MT_Set_PLC_Pause():Integer;stdcall;external 'MT_API.dll'
//停止PLC
function MT_Set_PLC_Stop():Integer;stdcall;external 'MT_API.dll'
//启动PLC程序
function MT_Set_PLC_Run():Integer;stdcall;external 'MT_API.dll'
//设置PLC程序代码
function MT_Set_PLC_Data(AObj:Word;Value:Byte):Integer;stdcall;external 'MT_API.dll'
//读取PLC程序代码大小
function MT_Get_PLC_Code_Size(pValue:PInteger):Integer;stdcall;external 'MT_API.dll'
//2017 01 30 PLC V6 Add
//读取任务个数
//PLC任务数
function MT_Get_PLC_Task_Count(

  pValue:PInteger):Integer;stdcall;external 'MT_API.dll'
//PLC任务状态
function MT_Get_PLC_Task_Status(

  AObj:Word;pValue:PInteger):Integer;stdcall;external 'MT_API.dll'
//变量分割
function MT_Get_PLC_Var_Seg(

  pValue:PInteger):Integer;stdcall;external 'MT_API.dll'
//变量个数
function MT_Get_PLC_Var_Used(

  pValue:PInteger):Integer;stdcall;external 'MT_API.dll'
//PLC状态
function MT_Get_PLC_Status(

  pValue:PInteger):Integer;stdcall;external 'MT_API.dll'
//全局状态
function MT_Get_PLC_Tasks_Status(

  pValue:PInteger):Integer;stdcall;external 'MT_API.dll'

//Axis Ratio
function MT_Get_PLC_Axis_Ratio(

  AObj:Word;pValue:PSingle):Integer;stdcall;external 'MT_API.dll'
function MT_Get_PLC_Encoder_Ratio(

  AObj:Word;pValue:PSingle):Integer;stdcall;external 'MT_API.dll'

//2014 04 09补充定义 增加起始速度修改 增加多轴联动直线插补
function MT_Set_Axis_Home_V_Start(AObj:Word;Value:Integer):Integer;stdcall;external 'MT_API.dll'
function MT_Set_Axis_Home_Acc(AObj:Word;Value:Integer):Integer;stdcall;external 'MT_API.dll'
function MT_Set_Axis_Home_Dec(AObj:Word;Value:Integer):Integer;stdcall;external 'MT_API.dll'
function MT_Get_Axis_Home_Acc(AObj:Word;pValue:PInteger):Integer;stdcall;external 'MT_API.dll'
function MT_Get_Axis_Home_Dec(AObj:Word;pValue:PInteger):Integer;stdcall;external 'MT_API.dll'

function MT_Set_Axis_Velocity_V_Start(AObj:Word;Value:Integer):Integer;stdcall;external 'MT_API.dll'
function MT_Set_Axis_Velocity_Acc(AObj:Word;Value:Integer):Integer;stdcall;external 'MT_API.dll'
function MT_Set_Axis_Velocity_Dec(AObj:Word;Value:Integer):Integer;stdcall;external 'MT_API.dll'
function MT_Get_Axis_Velocity_Acc(AObj:Word;pValue:PInteger):Integer;stdcall;external 'MT_API.dll'
function MT_Get_Axis_Velocity_Dec(AObj:Word;pValue:PInteger):Integer;stdcall;external 'MT_API.dll'

function MT_Set_Axis_Position_V_Start(AObj:Word;Value:Integer):Integer;stdcall;external 'MT_API.dll'
function MT_Set_Axis_Position_Acc(AObj:Word;Value:Integer):Integer;stdcall;external 'MT_API.dll'
function MT_Set_Axis_Position_Dec(AObj:Word;Value:Integer):Integer;stdcall;external 'MT_API.dll'
function MT_Get_Axis_Position_Acc(AObj:Word;pValue:PInteger):Integer;stdcall;external 'MT_API.dll'
function MT_Get_Axis_Position_Dec(AObj:Word;pValue:PInteger):Integer;stdcall;external 'MT_API.dll'

function MT_Set_Axis_Line_V_Start(AObj:Word;Value:Integer):Integer;stdcall;external 'MT_API.dll'
function MT_Set_Axis_Circle_V_Start(AObj:Word;Value:Integer):Integer;stdcall;external 'MT_API.dll'

function MT_Set_Axis_Line_X_Run_Rel(AObj:Word;
  AAxis_Num:Integer;
  pAxis:PInteger;
  pTarget:PInteger):Integer;stdcall;external 'MT_API.dll'

function MT_Set_Axis_Line_X_Run_Abs(AObj:Word;
  AAxis_Num:Integer;
  pAxis:PInteger;
  pTarget:PInteger):Integer;stdcall;external 'MT_API.dll'
function MT_Set_Axis_Line_X_Target_Rel(AObj:Word;
  AAxisID:Integer;
  ATarget:Integer):Integer;stdcall;external 'MT_API.dll'
function MT_Set_Axis_Line_X_Target_Abs(AObj:Word;
  AAxisID:Integer;
  ATarget:Integer):Integer;stdcall;external 'MT_API.dll'
function MT_Set_Axis_Line_X_Count(AObj:Word;
  ANum:Integer):Integer;stdcall;external 'MT_API.dll'
function MT_Set_Axis_Line_X_Axis(AObj:Word;
  AAxisID:Integer;
  AAxis:Integer):Integer;stdcall;external 'MT_API.dll'
//流指令模式
//启动Stream
function MT_Set_Stream_Run():Integer;stdcall;external 'MT_API.dll'
//停止Stream
function MT_Set_Stream_Stop():Integer;stdcall;external 'MT_API.dll'
//暂停Stream
function MT_Set_Stream_Pause():Integer;stdcall;external 'MT_API.dll'
//清除Stream
function MT_Set_Stream_Clear():Integer;stdcall;external 'MT_API.dll'
//读取剩余空间
function MT_Get_Stream_Space(pValue:PInteger):Integer;stdcall;external 'MT_API.dll'
//读取总空间
function MT_Get_Stream_Total(pValue:PInteger):Integer;stdcall;external 'MT_API.dll'
//读取占用空间
function MT_Get_Stream_Count(pValue:PInteger):Integer;stdcall;external 'MT_API.dll'

function MT_Set_Stream_Delay(Value:Integer):Integer;stdcall;external 'MT_API.dll'
//直线插补运动
//设置直线插补加速度
function MT_Set_Stream_Line_Acc(AObj:Word;Value:Integer):Integer;stdcall;external 'MT_API.dll'
//设置直线插补减速度
function MT_Set_Stream_Line_Dec(AObj:Word;Value:Integer):Integer;stdcall;external 'MT_API.dll'
//设置直线插补速度
function MT_Set_Stream_Line_V_Max(AObj:Word;Value:Integer):Integer;stdcall;external 'MT_API.dll'
//设置直线插补启动速度
function MT_Set_Stream_Line_V_Start(AObj:Word;Value:Integer):Integer;stdcall;external 'MT_API.dll'
//设置直线插补停止
function MT_Set_Stream_Line_Stop(AObj:Word):Integer;stdcall;external 'MT_API.dll'
//设置直线插补急停
function MT_Set_Stream_Line_Halt(AObj:Word):Integer;stdcall;external 'MT_API.dll'
//启动直线插补
function MT_Set_Stream_Line_X_Run_Rel(AObj:Word;
  AAxis_Num:Integer;
  pAxis:PInteger;
  pTarget:PInteger):Integer;stdcall;external 'MT_API.dll'
function MT_Set_Stream_Line_X_Run_Abs(AObj:Word;
  AAxis_Num:Integer;
  pAxis:PInteger;
  pTarget:PInteger):Integer;stdcall;external 'MT_API.dll'


//设置圆弧插补主轴及速度
function MT_Set_Stream_Circle_Axis(AObj:Word;Axis_ID0,Axis_ID1:Integer):Integer;stdcall;external 'MT_API.dll'
//设置圆弧插补加速度
function MT_Set_Stream_Circle_Acc(AObj:Word;Value:Integer):Integer;stdcall;external 'MT_API.dll'
//设置圆弧插补减速度
function MT_Set_Stream_Circle_Dec(AObj:Word;Value:Integer):Integer;stdcall;external 'MT_API.dll'
//设置圆弧插补速度
function MT_Set_Stream_Circle_V_Max(AObj:Word;Value:Integer):Integer;stdcall;external 'MT_API.dll'
//设置圆弧插补启动速度
function MT_Set_Stream_Circle_V_Start(AObj:Word;Value:Integer):Integer;stdcall;external 'MT_API.dll'
//设置圆弧插补启动 顺时钟  圆心坐标模式
function MT_Set_Stream_Circle_R_CW_Run_Rel(AObj:Word;AR:Integer;
                  Axis_Target0,Axis_Target1:Integer):Integer;stdcall;external 'MT_API.dll'
function MT_Set_Stream_Circle_R_CW_Run_Abs(AObj:Word;AR:Integer;
                  Axis_Target0,Axis_Target1:Integer):Integer;stdcall;external 'MT_API.dll'
//设置圆弧插补启动 逆时钟   圆心坐标
function MT_Set_Stream_Circle_R_CCW_Run_Rel(AObj:Word;AR:Integer;
                  Axis_Target0,Axis_Target1:Integer):Integer;stdcall;external 'MT_API.dll'
function MT_Set_Stream_Circle_R_CCW_Run_Abs(AObj:Word;AR:Integer;
                  Axis_Target0,Axis_Target1:Integer):Integer;stdcall;external 'MT_API.dll'
//设置圆弧插补停止
function MT_Set_Stream_Circle_Stop(AObj:Word):Integer;stdcall;external 'MT_API.dll'
//设置圆弧插补急停
function MT_Set_Stream_Circle_Halt(AObj:Word):Integer;stdcall;external 'MT_API.dll'


function MT_Set_Stream_Wait_Line(AObj:Word):Integer;stdcall;external 'MT_API.dll'
function MT_Set_Stream_Wait_Circle(AObj:Word):Integer;stdcall;external 'MT_API.dll'

//设置单通道值
function MT_Set_Stream_OC_Out_Single(AObj:Word;Value:Integer):Integer;stdcall;external 'MT_API.dll'
//设置所有通道值
function MT_Set_Stream_OC_Out_All(Value:Integer):Integer;stdcall;external 'MT_API.dll'
//设置单通道值
function MT_Set_Stream_Optic_Out_Single(AObj:Word;Value:Integer):Integer;stdcall;external 'MT_API.dll'
//设置所有通道值
function MT_Set_Stream_Optic_Out_All(Value:Integer):Integer;stdcall;external 'MT_API.dll'
//等待Optic_In状态
function MT_Set_Stream_Wait_Optic_In(AObj:Word;Value:Integer):Integer;stdcall;external 'MT_API.dll'
//启动Stream
function MT_Set_Stream_Run_Check():Integer;stdcall;external 'MT_API.dll'
//减速功能
function MT_Set_Stream_Dec_Enable():Integer;stdcall;external 'MT_API.dll'
function MT_Set_Stream_Dec_Disable():Integer;stdcall;external 'MT_API.dll'
//编码器功能
function MT_Get_Encoder_Num(pValue:PInteger):Integer;stdcall;external 'MT_API.dll'
function MT_Get_Encoder_Pos(AObj:Word;pValue:PInteger):Integer;stdcall;external 'MT_API.dll'
function MT_Set_Encoder_Pos(AObj:Word;Value:Integer):Integer;stdcall;external 'MT_API.dll'
function MT_Set_Encoder_Z_Polarity(AObj:Word;Value:Integer):Integer;stdcall;external 'MT_API.dll'
function MT_Set_Encoder_Dir_Polarity(AObj:Word;Value:Integer):Integer;stdcall;external 'MT_API.dll'
function MT_Get_Encoder_Index_Line_Count(AObj:Word;pValue:PInteger):Integer;stdcall;external 'MT_API.dll'
function MT_Set_Encoder_Over_Enable(AObj:Word;Value:Integer):Integer;stdcall;external 'MT_API.dll'
function MT_Set_Encoder_Over_Max(AObj:Word;Value:Integer):Integer;stdcall;external 'MT_API.dll'
function MT_Set_Encoder_Over_Stable(AObj:Word;Value:Integer):Integer;stdcall;external 'MT_API.dll'

//3.16.1
function MT_Get_Push_Data(AObj:Word;pValue:PInteger):Integer;stdcall;external 'MT_API.dll'
//辅助计算公式
//mm to pluse
function MT_Help_Step_Line_Real_To_Steps(AStepAngle:Double;ADiv:Integer;
   APitch:Double;ALineRatio:Double;AValue:Double):Integer;stdcall;external 'MT_API.dll'
function MT_Help_Step_Circle_Real_To_Steps(AStepAngle:Double;ADiv:Integer;
   ACircleRatio:Double;AValue:Double):Integer;stdcall;external 'MT_API.dll'

//pluse to mm
function MT_Help_Step_Line_Steps_To_Real(AStepAngle:Double;ADiv:Integer;
   APitch:Double;ALineRatio:Double;AValue:Integer):Double;stdcall;external 'MT_API.dll'
function MT_Help_Step_Circle_Steps_To_Real(AStepAngle:Double;ADiv:Integer;
   ACircleRatio:Double;AValue:Integer):Double;stdcall;external 'MT_API.dll'
